--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <table cellspacing="20">
             <tr>
               <td>
-                <img src="C:\Users\RAMARAJU\Downloads\20200820_123837-modified.png" alt="profilepic" width="200" height="200">
+                <img src="images\20200820_123837-modified.png"" alt="profilepic" width="200" height="200">
               </td>
               <td>
                 <hr>
@@ -60,6 +60,6 @@
           <td>painting</td><td>⭐⭐⭐⭐</td>
           </tr>
         </table>
-        <h2><a href="D:\VS\forms.html">Contact me--></a></h2>
+        <h2><a href="forms.html">Contact me ➡️</a></h2>
     </body>
 </html>
